--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -132,17 +132,9 @@
             </button>
         </div>
     </div>
-    <div>
-        <ul>
-            @for (item of (this.noteService.items$ | async); track item) {
-                <li>
-                    {{ item['title'] }}
-                </li>    
-            }
-        </ul>
-        
-        <!-- @for (note of noteList; track note) {
+    <div>       
+        @for (note of getList(); track note) {
             <app-note [note]="note"></app-note>
-          } -->
+          }
     </div>
 </div>
